Bug fixes and Intendation fixes